2026-01 Feature Update for Version Next (6.0.0)

--- a/incident-history/incident-history.html
+++ b/incident-history/incident-history.html
@@ -183,7 +183,7 @@
 
     <section id="io" class="d-flex flex-column justify-content-center ">
         <!-- Incidents Overview -->
-        <div class="row row-lrd container-xxl container-mobile container-mobile-header">
+        <div class="row row-lrd container-xxl-io container-mobile container-mobile-header">
             <!-- NSL -->
             <div class="col-xl-4 col-md-6 wow fadeIn" data-wow-delay="300ms">
                 <div class="card card-nsl border-nsl h-100 py-2">
