--- a/mrt-lines/ccl.html
+++ b/mrt-lines/ccl.html
@@ -118,25 +118,25 @@
 
     <ul class="mobile-menu-nav">
       <li class="mobile-menu-item">
-        <a href="#" class="mobile-menu-link active">
+        <a href="../index.html" class="mobile-menu-link">
           <i class="fa-solid fa-regular fa-house"></i>
           <span>Home</span>
         </a>
       </li>
       <li class="mobile-menu-item">
-        <a href="statistics/statistics.html" class="mobile-menu-link">
+        <a href="../statistics/statistics.html" class="mobile-menu-link">
           <i class="fa-solid fa-chart-line"></i>
           <span>Statistics</span>
         </a>
       </li>
       <li class="mobile-menu-item">
-        <a href="incident-history/incident-history.html" class="mobile-menu-link">
+        <a href="../incident-history/incident-history.html" class="mobile-menu-link">
           <i class="fa-solid fa-clock-rotate-left"></i>
           <span>Incident History</span>
         </a>
       </li>
       <li class="mobile-menu-item">
-        <a href="our-networks.html" class="mobile-menu-link">
+        <a href="../our-networks.html" class="mobile-menu-link active">
           <i class="fa-solid fa-map"></i>
           <span>Networks</span>
         </a>
@@ -180,7 +180,41 @@
                 </span>
               </h1>
             </div>
+
+            <div class="scrollable-tabs-container">
+              <div class="left-arrow">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+                </svg>
+
+              </div>
+
+              <ul>
+                <li>
+                  <a href="#abt" class="active">About Line</a>
+                </li>
+
+                <li>
+                  <a href="#ld">Line Diagram</a>
+                </li>
+
+                <li>
+                  <a href="#stn">Stations</a>
+                </li>
+              </ul>
+
+              <div class="right-arrow active">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="size-6">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                </svg>
+
+              </div>
+            </div>
+
           </div>
+
         </div>
 
         <!-- Audio Elements -->
@@ -193,37 +227,7 @@
           Your browser does not support the audio element.
         </audio>
 
-        <div class="scrollable-tabs-container">
-          <div class="left-arrow">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-            </svg>
 
-          </div>
-
-          <ul>
-            <li>
-              <a href="#abt" class="active">About Line</a>
-            </li>
-
-            <li>
-              <a href="#ld">Line Diagram</a>
-            </li>
-
-            <li>
-              <a href="#stn">Stations</a>
-            </li>
-          </ul>
-
-          <div class="right-arrow active">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-            </svg>
-
-          </div>
-        </div>
         <hr>
       </div>
 
@@ -249,8 +253,7 @@
                       <i class="fa-solid fa-calendar"></i>
                     </div>
                     <h3 style="font-size: 18px; font-weight: bolder;">Opened</h3>
-                    <h4 style="font-size: 13px;">28 May 2009 <br>
-                      (in Phases)</h4>
+                    <h4 style="font-size: 13px;">28 May 2009 <br>(in Phases)</h4>
                   </div>
                 </div>
 
@@ -260,8 +263,7 @@
                       <i class="fa-regular fa-ruler-horizontal"></i>
                     </div>
                     <h3 style="font-size: 18px; font-weight: bolder;">Length</h3>
-                    <h4 style="font-size: 13px;">35.7 km <br>
-                      (with 30 stations)</h4>
+                    <h4 style="font-size: 13px;">35.7 km <br>(with 30 stations)</h4>
                   </div>
                 </div>
 
@@ -820,19 +822,19 @@
     });
   </script>
 
-    <script src="../js/navtabs.js"></script>
+  <script src="../js/navtabs.js"></script>
 
-    <script src="../js/jquery.min.js"></script>
+  <script src="../js/jquery.min.js"></script>
 
-    <script src="../js/popper.min.js"></script>
+  <script src="../js/popper.min.js"></script>
 
-    <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
 
-    <script src="../js/pw.bundle.js"></script>
+  <script src="../js/pw.bundle.js"></script>
 
-    <script src="../js/default-assets/active.js"></script>
+  <script src="../js/default-assets/active.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
   <script src="../js/dstabs.js"></script>
 
