--- a/our-networks.html
+++ b/our-networks.html
@@ -33,19 +33,19 @@
     }
 
     .line-nsl {
-        background-image: url("../img/caplets/NSLCap.png");
+        background-image: url("img/caplets/NSLCap.png");
     }
 
     .line-ccl {
-        background-image: url("../img/caplets/CCLCap.png");
+        background-image: url("img/caplets/CCLCap.png");
     }
 
     .line-bp {
-        background-image: url("../img/caplets/BPCap.png");
+        background-image: url("img/caplets/BPCap.png");
     }
 
     .line-bp {
-        background-image: url("../img/caplets/BPCap.png");
+        background-image: url("img/caplets/BPCap.png");
     }
 </style>
 
