--- a/mrt-lines/ccl.html
+++ b/mrt-lines/ccl.html
@@ -846,7 +846,7 @@
 
   <script src="../js/copy-to-clipboard.js"></script>
 
-  <script src="../chimes/chimes_ccl.js"></script>
+  <script src="../chimes/chimes.js"></script>
 
 </body>
 
