--- a/mrt-lines/nsl.html
+++ b/mrt-lines/nsl.html
@@ -713,16 +713,16 @@
     }
 
     function updateHrefForDarkMode() {
-      const link = document.getElementById('line-ccl');
-      const img = document.getElementById('line-ccl-img');
+      const link = document.getElementById('line-nsl');
+      const img = document.getElementById('line-nsl-img');
       const isDarkMode = document.body.classList.contains('dark-mode');
 
       if (isDarkMode) {
-        link.href = '../img/networks/ccl-diag-dark.png';
-        img.src = '../img/networks/ccl-diag-dark.png';
+        link.href = '../img/networks/nsl-diag-dark.png';
+        img.src = '../img/networks/nsl-diag-dark.png';
       } else {
-        link.href = '../img/networks/ccl-diag.png';
-        img.src = '../img/networks/ccl-diag.png';
+        link.href = '../img/networks/nsl-diag.png';
+        img.src = '../img/networks/nsl-diag.png';
       }
     }
 
@@ -769,7 +769,7 @@
 
   <script src="../js/copy-to-clipboard.js"></script>
 
-  <script src="../chimes/chimes_ccl.js"></script>
+  <script src="../chimes/chimes.js"></script>
 
 </body>
 
