2026-01 Feature Update for Version Next (6.0.0)

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <div class="card-body card-body-nsl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-nsl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-nsl text-uppercase mb-1">
                                     <a href="mrt-lines/nsl.html">North-South Line</a>
                                 </div>
                                 <!-- Days -->
@@ -323,7 +323,7 @@
                     <div class="card-body card-body-ewl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-ewl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-ewl text-uppercase mb-1">
                                     <a href="mrt-lines/ewl.html">East-West Line</a>
                                 </div>
                                 <!-- Days -->
@@ -352,7 +352,7 @@
                     <div class="card-body card-body-nel">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-nel text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-nel text-uppercase mb-1">
                                     <a href="mrt-lines/nel.html">North East Line</a>
                                 </div>
                                 <!-- Days -->
@@ -381,7 +381,7 @@
                     <div class="card-body card-body-ccl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-ccl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-ccl text-uppercase mb-1">
                                     <a href="mrt-lines/ccl.html">Circle Line</a>
                                 </div>
                                 <!-- Days -->
@@ -410,7 +410,7 @@
                     <div class="card-body card-body-dtl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-dtl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-dtl text-uppercase mb-1">
                                     <a href="mrt-lines/dtl.html">Downtown Line</a>
                                 </div>
                                 <!-- Days -->
@@ -439,7 +439,7 @@
                     <div class="card-body card-body-tel">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-tel text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-tel text-uppercase mb-1">
                                     <a href="mrt-lines/tel.html">Thomson-East Coast Line</a>
                                 </div>
                                 <!-- Days -->
@@ -468,7 +468,7 @@
                     <div class="card-body card-body-lrt">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-lrt text-uppercase mb-1">
                                     <a href="mrt-lines/bp.html">Bukit Panjang LRT</a>
                                 </div>
                                 <!-- Days -->
@@ -497,7 +497,7 @@
                     <div class="card-body card-body-lrt">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-lrt text-uppercase mb-1">
                                     <a href="mrt-lines/sk.html">Sengkang</a>-<a href="mrt-lines/pg.html">Punggol LRT</a>
                                 </div>
                                 <!-- Days -->
