--- a/incident-history/2023_incident-history.html
+++ b/incident-history/2023_incident-history.html
@@ -191,7 +191,7 @@
                     <div class="card-body card-body-nsl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-nsl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-nsl text-uppercase mb-1">
                                     <a href="mrt-lines/nsl.html">North-South Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -213,7 +213,7 @@
                     <div class="card-body card-body-ewl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-ewl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-ewl text-uppercase mb-1">
                                     <a href="mrt-lines/ewl.html">East-West Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -235,7 +235,7 @@
                     <div class="card-body card-body-nel">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-nel text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-nel text-uppercase mb-1">
                                     <a href="mrt-lines/nel.html">North East Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -257,7 +257,7 @@
                     <div class="card-body card-body-ccl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-ccl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-ccl text-uppercase mb-1">
                                     <a href="mrt-lines/ccl.html">Circle Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -279,7 +279,7 @@
                     <div class="card-body card-body-dtl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-dtl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-dtl text-uppercase mb-1">
                                     <a href="mrt-lines/dtl.html">Downtown Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -301,7 +301,7 @@
                     <div class="card-body card-body-tel">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-tel text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-tel text-uppercase mb-1">
                                     <a href="mrt-lines/tel.html">Thomson-East Coast Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -323,7 +323,7 @@
                     <div class="card-body card-body-lrt">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-lrt text-uppercase mb-1">
                                     <a href="mrt-lines/bp.html">Bukit PanAprg LRT</a>
                                 </div>
                                 <!-- Incidents -->
@@ -345,7 +345,7 @@
                     <div class="card-body card-body-lrt">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-lrt text-uppercase mb-1">
                                     <a href="mrt-lines/sk.html">Sengkang</a>-<a href="mrt-lines/pg.html">Punggol LRT</a>
                                 </div>
                                 <!-- Incidents -->
