--- a/incident-history/2024_incident-history.html
+++ b/incident-history/2024_incident-history.html
@@ -192,7 +192,7 @@
                     <div class="card-body card-body-nsl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-nsl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-nsl text-uppercase mb-1">
                                     <a href="mrt-lines/nsl.html">North-South Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -214,7 +214,7 @@
                     <div class="card-body card-body-ewl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-ewl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-ewl text-uppercase mb-1">
                                     <a href="mrt-lines/ewl.html">East-West Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -236,7 +236,7 @@
                     <div class="card-body card-body-nel">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-nel text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-nel text-uppercase mb-1">
                                     <a href="mrt-lines/nel.html">North East Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -258,7 +258,7 @@
                     <div class="card-body card-body-ccl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-ccl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-ccl text-uppercase mb-1">
                                     <a href="mrt-lines/ccl.html">Circle Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -280,7 +280,7 @@
                     <div class="card-body card-body-dtl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-dtl text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-dtl text-uppercase mb-1">
                                     <a href="mrt-lines/dtl.html">Downtown Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -302,7 +302,7 @@
                     <div class="card-body card-body-tel">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-tel text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-tel text-uppercase mb-1">
                                     <a href="mrt-lines/tel.html">Thomson-East Coast Line</a>
                                 </div>
                                 <!-- Incidents -->
@@ -324,7 +324,7 @@
                     <div class="card-body card-body-lrt">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-lrt text-uppercase mb-1">
                                     <a href="mrt-lines/bp.html">Bukit Panjang LRT</a>
                                 </div>
                                 <!-- Incidents -->
@@ -346,7 +346,7 @@
                     <div class="card-body card-body-lrt">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
+                                <div class="line-io text-xs font-weight-bold text-lrt text-uppercase mb-1">
                                     <a href="mrt-lines/sk.html">Sengkang</a>-<a href="mrt-lines/pg.html">Punggol LRT</a>
                                 </div>
                                 <!-- Incidents -->
