--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -175,16 +175,14 @@
 
     <section id="lrd" class="flex-column justify-content-center">
 
-        <div class="row row-ri container-xxl container-mobile container-mobile-header">
+        <div class="container-xxl container-mobile container-mobile-header">
 
-            <div class="row h-100 align-items-center">
                 <div class="col-12" style="margin-bottom:2em; padding-left: 0em;">
                     <h6>Our Train Network's Service Reliability is measured using the industry-wide standard of Mean
                         Kilometres Between Failure (MKBF). This means we track the
                         mean distance that a train travels before a delay of more than 5 minutes.</h6>
                 </div>
-            </div>
-
+           
 
             <div class="alert alert-primary wow fadeInUp" data-wow-delay="100ms" role="alert"
                 style="margin-bottom: 2em; cursor: default;">
