2026-01 Feature Update for Version Next (6.0.0)
RTM-Escrow

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                 <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 17/09/2025
                             </div>
                             <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/TELCap.png" alt="TEL" width="55px" style="padding-bottom: 1em;">
+                                <img src="img/caplets/TELCap.svg" alt="TEL" width="55px" style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1968109920781472046"
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
@@ -200,7 +200,7 @@
                                 <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 16/09/2025
                             </div>
                             <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/EWLCap.png" alt="EWL" width="55px" style="padding-bottom: 1em;">
+                                <img src="img/caplets/EWLCap.svg" alt="EWL" width="55px" style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1967969162141278540"
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
@@ -222,7 +222,7 @@
                                 <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 14/09/2025
                             </div>
                             <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
+                                <img src="img/caplets/NSLCap.svg" alt="NSL" width="55px" style="padding-bottom: 1em;">
                                 <a href="https://x.com/SMRT_Singapore/status/1967072057193361822"
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
@@ -243,7 +243,7 @@
                                 <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 13/09/2025
                             </div>
                             <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/PGCap.png" alt="PG" width="55px" style="padding-bottom: 1em;">
+                                <img src="img/caplets/PGCap.svg" alt="PG" width="55px" style="padding-bottom: 1em;">
                                 <a href="https://x.com/SBSTransit_Ltd/status/1966611284083740875"
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
@@ -310,7 +310,7 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px">
+                                <img src="img/caplets/NSLCap.svg" alt="NSL" width="55px">
                             </div>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <img src="img/caplets/EWLCap.png" alt="EWL" width="55px">
+                                <img src="img/caplets/EWLCap.svg" alt="EWL" width="55px">
                             </div>
                         </div>
                     </div>
@@ -368,7 +368,7 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <img src="img/caplets/NELCap.png" alt="NEL" width="55px">
+                                <img src="img/caplets/NELCap.svg" alt="NEL" width="55px">
                             </div>
                         </div>
                     </div>
@@ -397,7 +397,7 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <img src="img/caplets/CCLCap.png" alt="CCL" width="55px">
+                                <img src="img/caplets/CCLCap.svg" alt="CCL" width="55px">
                             </div>
                         </div>
                     </div>
@@ -426,7 +426,7 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <img src="img/caplets/DTLCap.png" alt="DTL" width="55px">
+                                <img src="img/caplets/DTLCap.svg" alt="DTL" width="55px">
                             </div>
                         </div>
                     </div>
@@ -455,7 +455,7 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <img src="img/caplets/TELCap.png" alt="TEL" width="55px">
+                                <img src="img/caplets/TELCap.svg" alt="TEL" width="55px">
                             </div>
                         </div>
                     </div>
@@ -484,7 +484,7 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <img src="img/caplets/BPCap.png" alt="BPLRT" width="55px">
+                                <img src="img/caplets/BPCap.svg" alt="BPLRT" width="55px">
                             </div>
                         </div>
                     </div>
@@ -513,7 +513,7 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <img src="img/caplets/SKPGCap.png" alt="SKPGLRT" width="55px">
+                                <img src="img/caplets/SKPGCap.svg" alt="SKPGLRT" width="55px">
                             </div>
                         </div>
                     </div>
