--- a/mrt-lines/sk.html
+++ b/mrt-lines/sk.html
@@ -174,8 +174,7 @@
               </ol>
             </nav>
             <div class="page-title-wrapper">
-              <h1 class="page-title-single"><span id="chimes" style="cursor: pointer;"
-                  title="Click me to hear the BPLRT Chime!">
+              <h1 class="page-title-single">
                   Sengkang LRT
                 </span>
               </h1>
