--- a/mrt-lines/ewl.html
+++ b/mrt-lines/ewl.html
@@ -332,7 +332,7 @@
                 </div>
 
                 <div class="col-md-12 col-12 box-indiv" id="stn">
-                  <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
+                  <div class="about-me-stations text-center mb-80 wow fadeIn" data-wow-delay="700ms">
 
                     <h3 class="ld-s-title">Stations</h3>
                     <div class="row justify-content-center">
