--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -184,7 +184,7 @@
                 </div>
            
 
-            <div class="alert alert-primary wow fadeInUp" data-wow-delay="100ms" role="alert"
+            <div class="alert alert-primary wow fadeIn" data-wow-delay="100ms" role="alert"
                 style="margin-bottom: 2em; cursor: default;">
                 <i class="fa-solid fa-circle-info"></i>&nbsp; <b>Data as of 10 October 2025 </b>
             </div>
@@ -192,7 +192,7 @@
 
             <div class="accordion" id="accordMKBF">
 
-                <div class="accordion-item wow fadeInUp" data-wow-delay="100ms">
+                <div class="accordion-item wow fadeIn" data-wow-delay="100ms">
                     <h2 class="accordion-header " id="headingSMRT">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseSMRT" aria-expanded="false" aria-controls="collapseSMRT">
@@ -243,7 +243,7 @@
                     </div>
                 </div>
 
-                <div class="accordion-item wow fadeInUp" data-wow-delay="300ms">
+                <div class="accordion-item wow fadeIn" data-wow-delay="300ms">
                     <h2 class="accordion-header " id="headingSBST">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseSBST" aria-expanded="false" aria-controls="collapseSBST">
