2026-01 Feature Update for Version Next (6.0.0)

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         </div>
 
         <!-- Days Overview -->
-        <div class="row row-lrd container-xxl container-mobile container-mobile-header">
+        <div class="row container-xxl container-mobile container-mobile-header">
             <!-- NSL -->
             <div class="col-xl-4 col-md-6 wow fadeIn" data-wow-delay="300ms">
                 <div class="card card-nsl border-nsl h-100 py-2">
@@ -560,7 +560,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/index-alt.js"></script>
 
-    <script src="overview/days-overview_exp.js"></script>
+    <script src="overview/days-overview.js"></script>
 
     <script src="js/navtabs.js"></script>
 
