2025-11 Cumulative Update for Version Next (6.0.2)

--- a/index-ud.html
+++ b/index-ud.html
@@ -137,12 +137,13 @@
 
     <!-- Recent Incidents -->
     <section id="ri" class="d-flex flex-column justify-content-center">
-            <div class="container-xxl container-mobile container-mobile-header my-4 d-flex justify-content-end">
-        <select id="delayFilter" class="form-select w-auto">
-            <option value="reported">Reported Delays Only</option>
-            <option value="unreported">Includes Unreported Delays</option>
-        </select>
-    </div>
+        <!-- Dropdown for toggling -->
+        <div class="container-xxl container-mobile container-mobile-header my-4 d-flex justify-content-end">
+            <select id="delayFilter" class="form-select w-auto">
+                <option value="unreported">Includes Unreported Delays</option>
+                <option value="reported">Reported Delays Only</option>
+            </select>
+        </div>
         <div class="row row-ri">
             <div class="slide-container swiper">
                 <div class="slide-content">
@@ -150,20 +151,21 @@
                         <!-- Card 1 -->
                         <div class="card-ri swiper-slide wow fadeIn" data-wow-delay="100ms">
                             <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 17/09/2025
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 18/11/2025
                             </div>
                             <div class="card-body text-primary" style="position: relative;">
                                 <img src="img/caplets/TELCap.png" alt="TEL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1968109920781472046"
+                                <a href="https://www.reddit.com/r/SMRTRabak/comments/1ozuu7e/tel_delay_again/"
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
                                         title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px;">
-                                    UPDATE: There will be no train services between Woodlands North and Bayshore in both
-                                    directions to facilitate train service recovery. Free regular and bridging bus
-                                    services between Woodlands North and Bayshore are available...
+                                    Thomson East Coast Line:
+                                    Train fault, Extra travelling time of
+                                    30mins between TE9 Caldecott and
+                                    TE22 Gardens by the Bay
                                 </p>
 
                             </div>
@@ -172,20 +174,22 @@
                         <!-- Card 2 -->
                         <div class="card-ri swiper-slide wow fadeIn" data-wow-delay="100ms">
                             <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 16/09/2025
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/11/2025
                             </div>
                             <div class="card-body text-primary" style="position: relative;">
                                 <img src="img/caplets/EWLCap.png" alt="EWL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1967969162141278540"
+                                <a href="https://www.reddit.com/r/SMRTRabak/comments/1ou4alr/oh_dear/"
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
                                         title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px;">
-                                    UPDATE: Due to a signalling fault, there is no train svc btwn #Aljunied and
-                                    #TanahMerah. Free regular bus & free bridging bus svcs btwn #Aljunied and
-                                    #TanahMerah.
+                                    East West Line: Track Fault, extra
+                                    travelling time of 15mins between
+                                    EW2 Tampines and EW1 Pasir Ris
+                                    Pasir Ris. Free regular bus service
+                                    available.
                                 </p>
 
                             </div>
@@ -271,7 +275,7 @@
                                 <!-- Days -->
                                 <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-09-14"></div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
-                                    since last reported delay</div>
+                                    since last delay</div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;
                                     <a href="incident-history/incident-history.html#2025-09-14"
@@ -298,14 +302,14 @@
                                     <a href="mrt-lines/ewl.html">East-West Line</a>
                                 </div>
                                 <!-- Days -->
-                                <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-09-16"></div>
+                                <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-11-11"></div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
-                                    since last reported delay</div>
+                                    since last delay</div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;
-                                    <a href="incident-history/incident-history.html#2025-09-16"
+                                    <a href="incident-history/incident-history.html#2025-11-11"
                                         id="ewl-last-delay-link">
-                                        <span id="ewl-last-delay" data-last-delay="2025-09-16"></span>
+                                        <span id="ewl-last-delay" data-last-delay="2025-11-11"></span>
                                     </a>
                                 </div>
                             </div>
@@ -329,7 +333,7 @@
                                 <!-- Days -->
                                 <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-08-28"></div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
-                                    since last reported delay</div>
+                                    since last delay</div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;
                                     <a href="incident-history/incident-history.html#2025-08-28-2"
@@ -358,7 +362,7 @@
                                 <!-- Days -->
                                 <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-09-01"></div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
-                                    since last reported delay</div>
+                                    since last delay</div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;
                                     <a href="incident-history/incident-history.html#2025-09-01"
@@ -387,7 +391,7 @@
                                 <!-- Days -->
                                 <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-08-28"></div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
-                                    since last reported delay</div>
+                                    since last delay</div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;
                                     <a href="incident-history/incident-history.html#2025-08-28"
@@ -414,14 +418,14 @@
                                     <a href="mrt-lines/tel.html">Thomson - East Coast Line</a>
                                 </div>
                                 <!-- Days -->
-                                <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-09-17"></div>
+                                <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-11-18"></div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
-                                    since last reported delay</div>
+                                    since last delay</div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;
-                                    <a href="incident-history/incident-history.html#2025-09-17"
+                                    <a href="incident-history/incident-history.html#2025-11-18"
                                         id="nsl-last-delay-link">
-                                        <span id="nsl-last-delay" data-last-delay="2025-09-17"></span>
+                                        <span id="nsl-last-delay" data-last-delay="2025-11-18"></span>
                                     </a>
                                 </div>
                             </div>
@@ -445,7 +449,7 @@
                                 <!-- Days -->
                                 <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-07-19"></div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
-                                    since last reported delay</div>
+                                    since last delay</div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;
                                     <a href="incident-history/incident-history.html#2025-07-19"
@@ -475,7 +479,7 @@
                                 <!-- Days -->
                                 <div class="h5 days mb-0 font-weight-bold" data-last-delay="2025-09-13"></div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
-                                    since last reported delay</div>
+                                    since last delay</div>
                                 <div class="slrd text-xs font-weight-bold text-uppercase mb-1">
                                     <i class="fa-solid fa-clock-rotate-left"></i>&nbsp;
                                     <a href="incident-history/incident-history.html#2025-09-13"
