--- a/index-ud.html
+++ b/index-ud.html
@@ -198,19 +198,20 @@
                         <!-- Card 3 -->
                         <div class="card-ri swiper-slide wow fadeIn" data-wow-delay="100ms">
                             <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 14/09/2025
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 17/09/2025
                             </div>
                             <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1967072057193361822"
+                                <img src="img/caplets/TELCap.png" alt="TEL" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1968109920781472046"
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
                                         title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px;">
-                                    Due to a train fault, pls add 25mins train travel time from #Newton to #AngMoKio
-                                    towards #JurongEast.
+                                    UPDATE: There will be no train services between Woodlands North and Bayshore in both
+                                    directions to facilitate train service recovery. Free regular and bridging bus
+                                    services between Woodlands North and Bayshore are available...
                                 </p>
 
                             </div>
@@ -219,19 +220,20 @@
                         <!-- Card 4 -->
                         <div class="card-ri swiper-slide wow fadeIn" data-wow-delay="100ms">
                             <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 13/09/2025
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 16/09/2025
                             </div>
                             <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/PGCap.png" alt="PG" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SBSTransit_Ltd/status/1966611284083740875"
+                                <img src="img/caplets/EWLCap.png" alt="EWL" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1967969162141278540"
                                     style="position: absolute; top: -34px; right: 16px;">
                                     <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
                                         title="via X (Twitter)"></i>
                                 </a>
 
                                 <p class="card-text-ri" style="font-size: 15px;">
-                                    No Punggol LRT service due to a systems fault. Free regular and bridging bus
-                                    services have been activated. We are sorry for the inconvenience caused.
+                                    UPDATE: Due to a signalling fault, there is no train svc btwn #Aljunied and
+                                    #TanahMerah. Free regular bus & free bridging bus svcs btwn #Aljunied and
+                                    #TanahMerah.
                                 </p>
 
                             </div>
