--- a/bat/bus-arr.html
+++ b/bat/bus-arr.html
@@ -305,7 +305,8 @@
         // Fetch data from the backend and populate the table
         const fetchBusArrivals = async () => {
             try {
-                const response = await fetch('http://localhost:3000/get-bus-arrivals'); // Backend endpoint
+                const baseUrl = window.location.origin; // Dynamically determine the base URL
+                const response = await fetch(`${baseUrl}/get-bus-arrivals`); // Backend endpoint
                 const data = await response.json();
 
                 // Get the table body element
@@ -316,18 +317,15 @@
                 data.forEach((service) => {
                     const row = document.createElement('tr');
                     row.innerHTML = `
-          <td>${service.serviceno}</td>
-          <td>${new Date(service.estimatedarrival).toLocaleString()}</td>
-        `;
+                    <td>${service.serviceno}</td>
+                    <td>${new Date(service.estimatedarrival).toLocaleString()}</td>
+                `;
                     tableBody.appendChild(row);
                 });
             } catch (error) {
                 console.error('Error fetching bus arrivals:', error);
             }
         };
-
-        // Call the function to fetch and display data
-        fetchBusArrivals();
 
         // Call the function to fetch and display data
         fetchBusArrivals();
