--- a/bat/bus-arr.html
+++ b/bat/bus-arr.html
@@ -302,38 +302,44 @@
 
 
     <script>
-        // Fetch data from the backend and populate the table
-        const fetchBusArrivals = async () => {
-            try {
-                const baseUrl = window.location.origin; // Dynamically determine the base URL
-                const response = await fetch(`${baseUrl}/get-bus-arrivals`); // Backend endpoint
-                const data = await response.json();
+const fetchBusArrivals = async () => {
+    try {
+        const baseUrl = "https://bat-lta-5a035f9d4a02.herokuapp.com";
+        const response = await fetch(`${baseUrl}/get-bus-arrivals`);
+        console.log('Response status:', response.status); // Log the response status
 
-                // Get the table body element
-                const tableBody = document.querySelector('tbody');
-                tableBody.innerHTML = ''; // Clear existing rows
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+        }
 
-                // Populate the table with data
-                data.forEach((service) => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                    <td>${service.serviceno}</td>
-                    <td>${new Date(service.estimatedarrival).toLocaleString()}</td>
-                `;
-                    tableBody.appendChild(row);
-                });
-            } catch (error) {
-                console.error('Error fetching bus arrivals:', error);
-            }
-        };
+        const data = await response.json();
+        console.log('Fetched data:', data); // Log the fetched data
 
-        // Call the function to fetch and display data
-        fetchBusArrivals();
+        // Get the table body element
+        const tableBody = document.querySelector('tbody');
+        tableBody.innerHTML = ''; // Clear existing rows
 
-        // Refresh the page every 30 seconds
-        setInterval(() => {
-            location.reload();
-        }, 30000); // 30000 milliseconds = 30 seconds
+        // Populate the table with data
+        data.forEach((service) => {
+            const row = document.createElement('tr');
+            row.innerHTML = `
+                <td>${service.serviceno}</td>
+                <td>${new Date(service.estimatedarrival).toLocaleString()}</td>
+            `;
+            tableBody.appendChild(row);
+        });
+    } catch (error) {
+        console.error('Error fetching bus arrivals:', error);
+    }
+};
+
+// Call the function to fetch and display data
+fetchBusArrivals();
+
+// Fetch new data every 30 seconds
+setInterval(() => {
+    fetchBusArrivals();
+}, 30000); // 30000 milliseconds = 30 seconds
     </script>
 
 </body>
